--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "3.5.16",
     "del": "2.2.0",
     "dotenv": "2.0.0",
+    "eslint": "^7.17.0",
     "express": "4.13.4",
     "font-awesome": "4.5.0",
     "glob": "7.0.3",
@@ -52,8 +53,6 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.7.2",
-    "eslint": "2.7.0",
-    "eslint-plugin-react": "4.3.0",
     "expect": "1.16.0",
     "mocha": "2.4.5",
     "mockery": "1.5.1",
