--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "react": "^17.0.1"
   },
   "engines": {
-    "node": "0.12.x",
-    "npm": ">=3.0.0"
+    "node": ">=14.15.x",
+    "npm": ">=6.0.0"
   },
   "scripts": {
     "eslint": "eslint --ext .js --ext .jsx ./src/*",
