--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "express": "4.13.4",
     "font-awesome": "4.5.0",
     "glob": "7.0.3",
-    "gulp": "4.0.2",
     "gulp-flatten": "0.4.0",
     "gulp-rename": "2.0.0",
     "gulp-strip-debug": "3.0.0",
@@ -54,6 +53,7 @@
     "babel-preset-react": "6.5.0",
     "babel-register": "6.7.2",
     "expect": "1.16.0",
+    "gulp": "^4.0.2",
     "mocha": "2.4.5",
     "mockery": "1.5.1",
     "react": "^17.0.1",
