--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "babelify": "^7.3.0",
     "bluebird": "3.3.5",
     "browserify": "13.0.0",
     "browserify-resolutions": "1.0.6",
@@ -66,7 +65,7 @@
     "memory-cache": "0.1.5",
     "prop-types": "^15.7.2",
     "react-mixin": "3.0.4",
-    "reflux-react-16": "^1.0.2",
+    "reflux": "0.4.1",
     "request": "2.71.0",
     "superagent": "1.8.3",
     "superagent-bluebird-promise": "3.0.0",
@@ -84,11 +83,12 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.7.2",
+    "babelify": "^7.3.0",
     "expect": "1.16.0",
     "gulp": "^4.0.2",
     "mocha": "2.4.5",
     "mockery": "1.5.1",
-    "react": "^17.0.1",
+    "react": "^0.13.3",
     "sinon": "1.17.3"
   },
   "engines": {
@@ -100,7 +100,7 @@
   "main": "src/Mozaik.js",
   "name": "mozaik",
   "peerDependencies": {
-    "react": "^17.0.1"
+    "react": "^0.13.3"
   },
   "repository": {
     "type": "git",
