--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
   },
   "bundleDependencies": false,
   "dependencies": {
+    "babelify": "^7.3.0",
     "bluebird": "3.3.5",
     "browserify": "13.0.0",
     "browserify-resolutions": "1.0.6",
-    "babelify": "^7.3.0",
     "chalk": "1.1.3",
+    "chart.js": "^2.9.4",
     "classnames": "2.2.3",
     "d3": "3.5.16",
     "del": "2.2.0",
@@ -65,6 +66,7 @@
     "lodash": "4.10.0",
     "memory-cache": "0.1.5",
     "prop-types": "^15.7.2",
+    "react-chartjs-2": "^2.11.1",
     "react-mixin": "3.0.4",
     "reflux": "0.4.1",
     "request": "2.71.0",
